Fix spacing w/ total reviews and stars

--- a/client/components/PageNavBtns.module.css
+++ b/client/components/PageNavBtns.module.css
@@ -19,6 +19,9 @@
   border-radius: 50%;
   border: none;
   color:#008489;
+  height: 6vw;
+  width: 6vw;
+  margin: 3px;
 }
 
 .paginationBtn:hover {
