--- a/client/components/TotalReviews.module.css
+++ b/client/components/TotalReviews.module.css
@@ -4,8 +4,9 @@
   fill: #484848;
   letter-spacing: normal;
   display: flex;
-  /* justify-content: space-between;
-  flex-flow: row; */
+  justify-content: space-between;
+  align-items: center;
+  width: 250px;
 }
 
 .reviewTitle {
